# rapp-api

./: .gitignore  README.md
cpp/: CMakeLists.txt  RappConfig.cmake.in
cpp/impl/: CMakeLists.txt  vision.cpp
cpp/includes/: CMakeLists.txt  Doxyfile
cpp/includes/cloud/: CMakeLists.txt
cpp/includes/cloud/objectDetector/: objectDetector.hpp
cpp/includes/cloud/pathPlanner_2D/: Includes.ihh
cpp/includes/dox/: namespaces.dox
cpp/includes/objects/: CMakeLists.txt
cpp/includes/objects/Msg_header/: Header.hpp  time.hpp
cpp/includes/objects/Path/: Path.hpp
cpp/includes/objects/Pose/: Pose.hpp  point.hpp  quaternion.hpp
cpp/includes/objects/PoseStamped/: PoseStamped.hpp
cpp/includes/objects/QRCode3D/: Includes.ihh  QRCode3D.hpp
cpp/includes/objects/QRcodeMap/: Includes.ihh  QRcodeMap.hpp
cpp/includes/objects/matrix2D/: Includes.ihh  matrix2D.hpp
cpp/includes/objects/msg_header/: header.hpp  time.hpp
cpp/includes/objects/path/: path.hpp  pose.hpp  poseStamped.hpp  quaternion.hpp
cpp/includes/objects/picture/: Includes.ihh  picture.hpp
cpp/includes/objects/pose/: point.hpp
cpp/includes/objects/poseStamped/: poseStamped.hpp
cpp/includes/objects/qrCodeMap/: qrCodeMap.hpp
cpp/includes/robot/: Communication.hpp  Doxyfile  Includes.ihh  Navigation.hpp  Vision.hpp
cpp/includes/robot/communication/: Includes.ihh  communication.hpp
cpp/includes/robot/navigation/: Includes.ihh
cpp/includes/robot/vision/: Includes.ihh  vision.hpp
js/nao/: RAPPNao.js  RAPPNaoTest.js
