SET(VISION_LIB rapp_robot_vision)

add_library(${VISION_LIB} SHARED
	vision.cpp
)

target_link_libraries(${VISION_LIB}
	${RAPP_SHARED_NAME}
)

install (TARGETS ${VISION_LIB} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
GET_PROPERTY(FULL_VISION_NAME TARGET ${VISION_LIB} PROPERTY LOCATION)

SET(RAPP_SHARED_LIBS ${RAPP_SHARED_LIBS} ${FULL_VISION_NAME} PARENT_SCOPE)
